feat:commit add group graph api changes done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=xxxxxx
 spring.datasource.password=xxxxxx
 
+
+
 # Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
@@ -25,3 +27,9 @@ spring.jpa.hibernate.ddl-auto=none
 logging.level.org.springframework=info
 logging.level.org.hibernate.SQL=info
 logging.level.org.hibernate.type=info
+
+
+loggingComponentName= BEIS_Granting_Authority_API
+
+graphApiLoginUrl= https://login.microsoftonline.com
+graphApiUrl= https://graph.microsoft.com
