--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,18 +4,15 @@ application-description=@project.description@
 application-version=@project.version@
 
 #local - psql
-#local - psql
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=xxxxxx
 spring.datasource.password=xxxxxx
 
-
-
 # Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.batch_size=10
 spring.jpa.properties.hibernate.order_inserts=true
