--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ application-description=@project.description@
 application-version=@project.version@
 
 #local - psql
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=xxxxxx
-spring.datasource.password=xxxxxx
+spring.datasource.url=jdbc:postgresql://localhost:5432/TransparencyDB
+spring.datasource.username=postgres
+spring.datasource.password=password
 
 # Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
