--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,15 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.3.5.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
   <scm>
     <developerConnection>scm:git:https://github.com/UKGovernmentBEIS/transparency-db-ga-schemes-service/</developerConnection>
+    <tag>release-0.2.0</tag>
   </scm>
   <groupId>transparency-db-ga-schemes-service</groupId>
   <artifactId>transparency-db-ga-schemes-service</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.2.0</version>
   <name>GrantingAuthority-schemes-service</name>
   <description>Transparency DB GA Schemes Service Api</description>
   
