--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 	</parent>
   <scm>
     <developerConnection>scm:git:https://github.com/UKGovernmentBEIS/transparency-db-ga-schemes-service/</developerConnection>
-    <tag>release-0.6.1</tag>
+    <tag>HEAD</tag>
   </scm>
   <groupId>transparency-db-ga-schemes-service</groupId>
   <artifactId>transparency-db-ga-schemes-service</artifactId>
-  <version>0.6.1</version>
+  <version>0.6.2-SNAPSHOT</version>
   <name>GrantingAuthority-schemes-service</name>
   <description>Transparency DB GA Schemes Service Api</description>
   
